--- a/src/views/user/partials/navbar.ejs
+++ b/src/views/user/partials/navbar.ejs
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="row">
       <nav class="navbar navbar-expand-lg narbar-light">
-        <a class="navbar-brand logo" href="/">Dialysing<span>.com</span> </a>
-        <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
+        <a class="navbar-brand logo mt-3 mb-3" href="/">Dialysing<span>.com</span> </a>
+        <a href="#" class="location mt-3 mb-3 mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
         <!-- Location Modal -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
           <div class="modal-dialog">
@@ -63,7 +63,7 @@
         </button>
         <div id="mainNav" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item language-selection">
+            <li class="nav-item language-selection mt-3 mb-3">
               <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
               <div class="tm-form-element tm-form-element-2">
                 <select name="language" class="form-control tm-select" id="language">
@@ -73,11 +73,11 @@
                 </select>
               </div>
             </li>
-            <li class="nav-item question">
+            <li class="nav-item question mt-3 mb-3">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
-              <div>Klinik Hesabınız Var Mı?</div>
+              <div class="is-clinic">Klinik Hesabınız Var Mı?</div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mt-3 mb-3">
               <a href="/panel/choose-personel" class="nav-link btn-third">Giriş Yap</a>
             </li>
           </ul>
