--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -1114,3 +1114,13 @@ textarea#note.form-control {
   font-family: 'Montserrat', sans-serif !important; 
   font-size: 13px !important;
 }
+.logo { 
+  font-family: 'Khula', sans-serif !important;
+  font-weight: 700 !important; 
+}
+.is-clinic {
+  font-family: 'Lato', sans-serif !important;
+}
+.language-selection {
+  font-family: 'Lato', sans-serif !important;
+} 
