--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg py-3">
   <div class="container">
     <a class="navbar-brand" href="/">Dialysing<span>.com</span></a>
-    <a href="#" class="location mx-0"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i><span id="location"></span></a>
+    <a href="#" class="location mx-0"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0"
+        data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i><span id="location"></span></a>
     <!-- Location Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -53,7 +55,8 @@
         </div>
       </div>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07"
+      aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
       <span><i class="bi bi-list"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarsExample07">
@@ -61,34 +64,46 @@
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <div class="dropdown select-lang mt-2">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img key="flag" src="../user/img/flags/turkey.png" width="25" height="20" alt="Flags Turkey" /> Türkçe</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false"><img key="flag" src="../user/img/flags/turkey.png" width="25"
+                height="20" alt="Flags Turkey" /> Türkçe</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" id="tr" href="#"
-                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />Türkçe</div></a
-              >
-              <a class="dropdown-item" id="en" href="#"
-                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png" alt="Flags Turkey" />English</div></a
-              >
+              <a class="dropdown-item" id="tr" href="#">
+                <div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png"
+                    alt="Flags Turkey" />Türkçe</div>
+              </a>
+              <a class="dropdown-item" id="en" href="#">
+                <div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png"
+                    alt="Flags Turkey" />English</div>
+              </a>
             </div>
           </div>
         </li>
         <li class="nav-item">
           <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
         </li>
-        <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
-        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Kayıt Ol</button></li>
-        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
-        <li class="nav-item">
-          <div class="dropdown mt-3">
-            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle mt-1 mx-2" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
-            </a>
-            <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="#">Profil</a></li>
-              <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
-            </ul>
-          </div>
-        </li>
+        <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi
+            Ekleyin</button></li>
+        <% if (!user) { %>
+          <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Kayıt Ol</button></li>
+          <% } %>
+            <% if (!user) { %>
+              <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
+              <% } %>
+                <% if (user) { %>
+                  <li class="nav-item">
+                    <div class="dropdown mt-3">
+                      <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle mt-1 mx-2"
+                        id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
+                      </a>
+                      <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                        <li><a class="dropdown-item" href="#">Profil</a></li>
+                        <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                  <% } %>
       </ul>
     </div>
   </div>
