--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -6,25 +6,26 @@
       </button>
     </div>
     <div>
-        <a class="navbar-brand brand-logo" href="../index.html">Dialysing<span>.com</span> </a>
-        <a class="navbar-brand brand-logo-mini" href="../index.html">D</span></a>
+      <a class="navbar-brand brand-logo" href="/">Dialysing<span>.com</span> </a>
     </div>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-top">
     <ul class="navbar-nav">
       <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
         <div class="tm-form-element tm-form-element-2">
-          <select name="dialysisCenter" class="form-control tm-select" id="dialysisCenter"  onchange="changeCenter()">
-            <% user.centerList.forEach(center => { %>
-              <option value="<%- center._id  %> "><%- center.companyInformation.companyName  %> </option>
-            <% }) %>
+          <select name="dialysisCenter" class="form-control tm-select" id="dialysisCenter" onchange="changeCenter()">
+            <% user.centerList.forEach(center=> { %>
+              <option value="<%- center._id  %> ">
+                <%- center.companyInformation.companyName %>
+              </option>
+              <% }) %>
           </select>
         </div>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto">
       <li>
-        <%- user.priceCount  %> 
+        <%- user.priceCount %>
       </li>
       <li class="nav-item language">
         <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
@@ -41,7 +42,7 @@
         <a class="nav-link count-indicator" id="notificationDropdown" href="#" data-bs-toggle="dropdown">
           <img src="../user/img/icons/question.png" alt="Question Icon" />
         </a>
-        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="notificationDropdown">
+        <!-- <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="notificationDropdown">
           <a class="dropdown-item py-3 border-bottom">
             <p class="mb-0 font-weight-medium float-left">You have 4 new notifications</p>
             <span class="badge badge-pill badge-primary float-right">View all</span>
@@ -73,16 +74,20 @@
               <p class="fw-light small-text mb-0">2 days ago</p>
             </div>
           </a>
-        </div>
+        </div> -->
       </li>
+      <% if (!user) { %>
+        <li class="nav-item buttons">
+          <a href="/panel/choose-personel" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+        </li>
+        <% } %>
 
-      <li class="nav-item buttons">
-        <a href="/panel/choose-personel" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
-      </li>
 
-      <li class="nav-item ms-auto name"><%- user.nameSurname  %> </li>
-      <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
-      <li class="nav-item dropdown d-none d-lg-block user-dropdown">
+          <li class="nav-item ms-auto name">
+            <%- user.nameSurname %>
+          </li>
+          <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
+          <!-- <li class="nav-item dropdown d-none d-lg-block user-dropdown">
         <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> <img class="img-xs rounded-circle" src="../clinic-panel/images/profiles/Profile1.png" alt="Profile image" /> </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
           <div class="dropdown-header text-center">
@@ -96,9 +101,10 @@
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
         </div>
-      </li>
+      </li> -->
     </ul>
-    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
+    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
+      data-bs-toggle="offcanvas">
       <span class="mdi mdi-menu"></span>
     </button>
   </div>
@@ -106,7 +112,7 @@
 
 
 <script>
-  function changeCenter(){
-    window.location.replace("/panel?clinic="+document.getElementById("dialysisCenter").value);  
+  function changeCenter() {
+    window.location.replace("/panel?clinic=" + document.getElementById("dialysisCenter").value);
   }
 </script>
