--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -1,24 +1,30 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link" href="./index.html"> <img src="../clinic-panel/images/icons/Home.png" alt="Home Icon" /><span class="menu-title">Ana Sayfa</span></a>
+      <a class="nav-link" href="/clinic"> <img src="../clinic-panel/images/icons/Home.png" alt="Home Icon" /><span
+          class="menu-title">Ana Sayfa</span></a>
     </li>
     <!--=====Center=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#center" aria-expanded="false" aria-controls="center"> <img src="../clinic-panel/images/icons/Location.png" alt="Location Icon" /><span class="menu-title">Merkeziniz</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#center" aria-expanded="false" aria-controls="center"> <img
+          src="../clinic-panel/images/icons/Location.png" alt="Location Icon" /><span
+          class="menu-title">Merkeziniz</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="center">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="./upload-image.html">Fotoğraflar</a></li>
-          <li class="nav-item"><a class="nav-link" href="./message-options.html">Mesajlaşma Tercihleri</a></li>
-          <li class="nav-item"><a class="nav-link" href="./what-closest.html">Yakınlarda Neler Var?</a></li>
-          <li class="nav-item"><a class="nav-link" href="./properties-and-services.html">Özellikler ve Servisler</a></li>
-          <li class="nav-item"><a class="nav-link" href="./clinic-point.html">Merkez Puanı</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/upload-image">Fotoğraflar</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/message-options">Mesajlaşma Tercihleri</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/what-closest">Yakınlarda Neler Var?</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/properties-and-services">Özellikler ve Servisler</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="/panel/clinic-point">Merkez Puanı</a></li>
         </ul>
       </div>
     </li>
     <!--=====Opportunity Center=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#opp-center" aria-expanded="false" aria-controls="opp-center"> <img src="../clinic-panel/images/icons/Star.png" alt="Star Icon" /><span class="menu-title">Fırsat Merkezi</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#opp-center" aria-expanded="false" aria-controls="opp-center">
+        <img src="../clinic-panel/images/icons/Star.png" alt="Star Icon" /><span class="menu-title">Fırsat
+          Merkezi</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="opp-center">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"><a class="nav-link" href="/panel/visibility">Görünürlük Arttırma</a></li>
@@ -28,15 +34,20 @@
     </li>
     <!--=====Payment=====-->
     <li class="nav-item">
-      <a class="nav-link" href="./payment-options.html"> <img src="../clinic-panel/images/icons/Payment.png" alt="Payment Icon" /><span class="menu-title">Ödeme Şekilleri</span> </a>
+      <a class="nav-link" href="/panel/payment-options"> <img src="../clinic-panel/images/icons/Payment.png"
+          alt="Payment Icon" /><span class="menu-title">Ödeme Şekilleri</span> </a>
     </li>
     <!--=====Rezervations=====-->
     <li class="nav-item">
-      <a class="nav-link" href="/panel/answer-waiting-rezervations"> <img src="../clinic-panel/images/icons/Document.png" alt="Document Icon" /><span class="menu-title">Rezervasyonlar</span> </a>
+      <a class="nav-link" href="/panel/answer-waiting-rezervations"> <img
+          src="../clinic-panel/images/icons/Document.png" alt="Document Icon" /><span
+          class="menu-title">Rezervasyonlar</span> </a>
     </li>
     <!--=====Incoming Box=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#inbox" aria-expanded="false" aria-controls="inbox"> <img src="../clinic-panel/images/icons/Message.png" alt="Message Icon" /><span class="menu-title">Gelen Kutusu</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#inbox" aria-expanded="false" aria-controls="inbox"> <img
+          src="../clinic-panel/images/icons/Message.png" alt="Message Icon" /><span class="menu-title">Gelen
+          Kutusu</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="inbox">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"><a class="nav-link" href="/panel/rezervation-messages">Rezervasyon Mesajları</a></li>
@@ -55,11 +66,13 @@
     </li>
     <!--=====Analysis=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#analysis" aria-expanded="false" aria-controls="analysis"> <img src="../clinic-panel/images/icons/Chart.png" alt="Chart Icon" /><span class="menu-title">Analizler</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#analysis" aria-expanded="false" aria-controls="analysis">
+        <img src="../clinic-panel/images/icons/Chart.png" alt="Chart Icon" /><span class="menu-title">Analizler</span><i
+          class="menu-arrow"></i> </a>
       <div class="collapse" id="analysis">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="./analysis.html">Genel Analiz</a></li>
-          <li class="nav-item"><a class="nav-link" href="./competition.html">Rakip Analizi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/analysis">Genel Analiz</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/competition">Rakip Analizi</a></li>
         </ul>
       </div>
     </li>
