changing img responsive on index.ejs on panel

--- a/src/views/clinic-panel/pages/panel/clinic-point.ejs
+++ b/src/views/clinic-panel/pages/panel/clinic-point.ejs
@@ -16,7 +16,8 @@
                 </div>
                 <div class="tm-process-bar width-87 blue"></div>
                 <div class="tm-process-pers-av">Bölge Ort. %90</div>
-                <div class="tm-process-text">Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu aldığı gözlemlenmiştir.</div>
+                <div class="tm-process-text">Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu
+                  aldığı gözlemlenmiştir.</div>
               </div>
             </div>
             <div class="clinic-points">
@@ -57,7 +58,8 @@
               <div class="circle"></div>
               <div>
                 <div class="clinic-point-title">Çalışanlarınızın Konuştuğu Dilleri Ekleyin</div>
-                <div class="clinic-point-process">Çalışanlarınızın konuştuğu dilleri ekleyerek hastalarınızı bilgilendirin.</div>
+                <div class="clinic-point-process">Çalışanlarınızın konuştuğu dilleri ekleyerek hastalarınızı
+                  bilgilendirin.</div>
               </div>
             </div>
             <hr class="custom" />
@@ -105,7 +107,8 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="suggestion-button">
-            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png" alt="Icon Suggestion" />Öneriler</button>
+            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png"
+                alt="Icon Suggestion" />Öneriler</button>
           </div>
         </div>
       </div>
@@ -113,5 +116,5 @@
   </div>
 
   <%- include("../../partials/footer") %>
-  <!-- partial -->
+    <!-- partial -->
 </div>
