--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link" href="/clinic"> <img src="../clinic-panel/images/icons/Home.png" alt="Home Icon" /><span
+      <a class="nav-link" href="/panel/"> <img src="../clinic-panel/images/icons/Home.png" alt="Home Icon" /><span
           class="menu-title">Ana Sayfa</span></a>
     </li>
     <!--=====Center=====-->
