--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="../user/css/footer.css" />
   <link rel="stylesheet" href="../user/css/style.css" />
   <link rel="stylesheet" href="../user/css/clinic/index.css" />
+  <link rel="stylesheet" href="../user/clinic-panel/css/panel.css">
   <!-- Bootstrap 5.0-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
