--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -3,7 +3,9 @@
     <div id="section-i" class="tm-p">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <div class="tm-section-title"><%- center.companyInformation.companyName  %> </div>
+          <div class="tm-section-title">
+            <%- center.companyInformation.companyName %>
+          </div>
           <div class="tm-space-between">
             <div class="tm-display-flex">
               <img src="../user/img/icons/location-blue.png" class="tm-margin-r-10" alt="Location Icon" />
@@ -15,30 +17,37 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 clinic-images">
-              <img src="../user/img/clinic/centers/clinic-i.png" class="left-first" alt="Clinic Center i" />
-              <img src="../user/img/clinic/centers/clinic-ii.png" class="left-second" alt="Clinic Center ii" />
+              <img src="<%- center.companyInformation.photo[0]  %> " class="left-first mb-2"
+                alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" />
+              <img src="<%- center.companyInformation.photo[0]  %> " class="left-second mb-2"
+                alt="<%- center.companyInformation.companyName  %>" width="100%" height="50%" />
             </div>
             <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 clinic-images">
-              <img src="../user/img/clinic/centers/clinic-iii.png" class="right" alt="Clinic Center iii" />
+              <img src="<%- center.companyInformation.photo[0]  %> " class="right mb-2"
+                alt="<%- center.companyInformation.companyName  %>" width="100%" height="100%" />
             </div>
           </div>
-          <div class="row">
-            <div class="col clinic-images">
-              <img src="../user/img/clinic/centers/clinic-iv.png" class="bottom" alt="Clinic Center iv" />
+          <div class="sub-image row align-items-start mt-3">
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2"
+                alt="<%- center.companyInformation.companyName  %>" />
             </div>
-            <div class="col clinic-images">
-              <img src="../user/img/clinic/centers/clinic-v.png" class="bottom" alt="Clinic Center v" />
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2"
+                alt="<%- center.companyInformation.companyName  %>" />
             </div>
-            <div class="col clinic-images">
-              <img src="../user/img/clinic/centers/clinic-vi.png" class="bottom" alt="Clinic Center vi" />
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2"
+                alt="<%- center.companyInformation.companyName  %>" />
             </div>
-            <div class="col clinic-images">
-              <img src="../user/img/clinic/centers/clinic-vii.png" class="bottom" alt="Clinic Center vii" />
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2"
+                alt="<%- center.companyInformation.companyName  %>" />
             </div>
-            <a href="#" class="col clinic-images">
-              <img src="../user/img/clinic/centers/clinic-viii.png" class="bottom" alt="Clinic Center viii" />
-              <div class="">+45 Fotoğraf</div>
-            </a>
+            <div class="col">
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2"
+                alt="<%- center.companyInformation.companyName  %>" />
+            </div>
           </div>
           <div class="tm-section-title tm-margin-t-2">Gelecek Rezervasyonlarınız</div>
           <div class="row">
@@ -136,7 +145,8 @@
                 </div>
                 <div class="tm-process-bar width-87 blue"></div>
                 <div class="tm-process-pers-av">Bölge Ort. %90</div>
-                <div class="tm-process-text">Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu aldığı gözlemlenmiştir.</div>
+                <div class="tm-process-text">Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu
+                  aldığı gözlemlenmiştir.</div>
                 <div class="tm-process-link"><a href="#">Merkez puanı sayfasına git</a></div>
               </div>
             </div>
@@ -165,193 +175,12 @@
             </div>
           </div>
           <div class="tm-section-title tm-margin-t-1-5">Görünürlüğünüzü Arttırın</div>
-          <div class="admin-text">Merkezinizin görünürlüğünü çeşitli seçenekler ile arttırmanız mümkün. Merkezinize 30 KM uzaklıkta olan diğer merkezlerin görüntülenme oranları sizden %30 daha fazla durumdadır.</div>
-          <div class="admin-box tm-margin-t-1-5">
-            <div class="tm-process-title">Hangi Tarihlerde Görünürlüğünüzü Arttırmak İstersiniz?</div>
-            <div class="tm-process-subtitle tm-color-shadow-2">Görünürlüğünüzün arttırılacağı tarihleri seçiniz</div>
-            <div class="calendar tm-space-between">
-              <div>
-                <header>
-                  <a class="btn-prev" href="#"><img src="../clinic-panel//userimages/icons/cal-left.png" alt="Calendar Left Icon" /></a>
-                  <div class="tm-process-title">Temmuz</div>
-                </header>
-                <table>
-                  <thead>
-                    <tr class="days">
-                      <td>P</td>
-                      <td>S</td>
-                      <td>Ç</td>
-                      <td>P</td>
-                      <td>C</td>
-                      <td>C</td>
-                      <td>P</td>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td class="prev-month">27</td>
-                      <td class="prev-month">28</td>
-                      <td class="prev-month">29</td>
-                      <td class="prev-month">30</td>
-                      <td class="prev-month">31</td>
-                      <td>1</td>
-                      <td>2</td>
-                    </tr>
-                    <tr>
-                      <td class="selected-dates first">3</td>
-                      <td class="selected-dates">4</td>
-                      <td class="selected-dates">5</td>
-                      <td class="selected-dates">6</td>
-                      <td class="selected-dates last">7</td>
-                      <td>8</td>
-                      <td>9</td>
-                    </tr>
-                    <tr>
-                      <td class="event">10</td>
-                      <td>11</td>
-                      <td>12</td>
-                      <td>13</td>
-                      <td>14</td>
-                      <td>15</td>
-                      <td>16</td>
-                    </tr>
-                    <tr>
-                      <td>17</td>
-                      <td>18</td>
-                      <td>19</td>
-                      <td>20</td>
-                      <td class="event">21</td>
-                      <td>22</td>
-                      <td class="current-day event">23</td>
-                    </tr>
-
-                    <tr>
-                      <td>24</td>
-                      <td>25</td>
-                      <td>26</td>
-                      <td>27</td>
-                      <td>28</td>
-                      <td>29</td>
-                      <td>30</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div>
-                <header>
-                  <div class="tm-process-title">Ağustos</div>
-                  <a class="btn-next" href="#"><img src="../clinic-panel/images/icons/cal-right.png" alt="Calendar Right Icon" /></a>
-                </header>
-                <table>
-                  <thead>
-                    <tr class="days">
-                      <td>P</td>
-                      <td>S</td>
-                      <td>Ç</td>
-                      <td>P</td>
-                      <td>C</td>
-                      <td>C</td>
-                      <td>P</td>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td class="prev-month">27</td>
-                      <td class="prev-month">28</td>
-                      <td class="prev-month">29</td>
-                      <td class="prev-month">30</td>
-                      <td class="prev-month">31</td>
-                      <td>1</td>
-                      <td>2</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>4</td>
-                      <td>5</td>
-                      <td>6</td>
-                      <td>7</td>
-                      <td>8</td>
-                      <td>9</td>
-                    </tr>
-                    <tr>
-                      <td class="event">10</td>
-                      <td>11</td>
-                      <td>12</td>
-                      <td>13</td>
-                      <td>14</td>
-                      <td>15</td>
-                      <td>16</td>
-                    </tr>
-                    <tr>
-                      <td>17</td>
-                      <td>18</td>
-                      <td>19</td>
-                      <td>20</td>
-                      <td class="event">21</td>
-                      <td>22</td>
-                      <td class="current-day event">23</td>
-                    </tr>
-
-                    <tr>
-                      <td>24</td>
-                      <td>25</td>
-                      <td>26</td>
-                      <td>27</td>
-                      <td>28</td>
-                      <td>29</td>
-                      <td>30</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <!-- end calendar -->
-            <div class="tm-process-title">Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?</div>
-            <div class="form-group radio same-row tm-space-between">
-              <label class="container custom custom-radios custom"
-                >Tüm Dünya
-                <input type="radio" checked="checked" name="radio" />
-                <span class="checkmark"></span>
-              </label>
-              <label class="container custom custom-radios unselected custom"
-                >Belirli ülke/bölge
-                <input type="radio" name="radio" />
-                <span class="checkmark"></span>
-              </label>
-              <label class="container custom custom-radios unselected custom"
-                >Bulunduğun İl
-                <input type="radio" name="radio" />
-                <span class="checkmark"></span>
-              </label>
-              <label class="container custom custom-radios unselected custom"
-                >Bulunduğun İlçe
-                <input type="radio" name="radio" />
-                <span class="checkmark"></span>
-              </label>
-              <label class="container custom custom-radios unselected custom"
-                >Anasayfa
-                <input type="radio" name="radio" />
-                <span class="checkmark"></span>
-              </label>
-            </div>
-            <div class="calendar-button-next">
-              <button type="button" class="btn-second">Devam Et</button>
-            </div>
-          </div>
+          <div class="admin-text">Merkezinizin görünürlüğünü çeşitli seçenekler ile arttırmanız mümkün. Merkezinize 30
+            KM uzaklıkta olan diğer merkezlerin görüntülenme oranları sizden %30 daha fazla durumdadır.</div>
         </div>
       </div>
     </div>
 
-    <div id="section-ii" class="tm-p tm-pt-0">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-section-title">Merkezin Önizlenmesi</div>
-          <div class="admin-text">Hastalarınız tarafından merkezinizin sayfası bu şekilde görüntülenmektedir.</div>
-          <div></div>
-          <img src="../clinic-panel/images/dialysing/screenshot.png" class="screenshot" alt="Location Icon" />
-        </div>
-      </div>
-    </div>
   </div>
   <!-- content-wrapper ends -->
   <div id="suggestion">
@@ -359,7 +188,8 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="suggestion-button">
-            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png" alt="Icon Suggestion" />Öneriler</button>
+            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png"
+                alt="Icon Suggestion" />Öneriler</button>
           </div>
         </div>
       </div>
@@ -369,5 +199,5 @@
 
   <%- include("../../partials/footer") %>
 
-  <!-- partial -->
+    <!-- partial -->
 </div>
