finished index.ejs design

--- a/src/views/clinic-panel/layouts/index.ejs
+++ b/src/views/clinic-panel/layouts/index.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../user/css/clinic/style.css" />
     <link rel="stylesheet" href="../user/css/clinic/clinic.css" />
     <link rel="stylesheet" href="../user/css/footer.css" />
+    <link rel="stylesheet" href="../user/css/panel.css">
 
     <!-- Location -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
