finished design on panel in anasayfa

--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -1,8 +1,8 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link" href="/panel/"> <img src="../clinic-panel/images/icons/Home.png" alt="Home Icon" /><span
-          class="menu-title">Ana Sayfa</span></a>
+      <a class="nav-link" href="/panel"><img src="../clinic-panel/images/icons/Home.png"
+          alt="Home Icon" /><span class="menu-title">Ana Sayfa</span> </a>
     </li>
     <!--=====Center=====-->
     <li class="nav-item">
