--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -1,6 +1,6 @@
 <!--======= FOOTER =====-->
 <footer>
-  <div class="container footer p-5">
+  <div class="container footer">
     <div class="row pt-5">
       <div class="col-lg-3 mb-5">
         <h5>
